Buttons can get activated
No major changes

--- a/webpages/main.html
+++ b/webpages/main.html
@@ -1613,13 +1613,13 @@
 
       <div class="block">
         <h5>Tab Symbols:</h5>
-        <button type="button" name="Hammer On">h</button>
-        <button type="button" name="Bend">b</button>
-        <button type="button" name="Pull Off">p</button>
-        <button type="button" name="Hammer On">h</button>
-        <button type="button" name="Slide Up">/</button>
-        <button type="button" name="Slide Down">\</button>
-        <button type="button" name="Vibrato">~</button>
+        <button type="button" class = "optionBtn" name="Hammer On">h</button>
+        <button type="button" class = "optionBtn" name="Bend">b</button>
+        <button type="button" class = "optionBtn" name="Pull Off">p</button>
+        <button type="button" class = "optionBtn" name="Hammer On">h</button>
+        <button type="button" class = "optionBtn" name="Slide Up">/</button>
+        <button type="button" class = "optionBtn" name="Slide Down">\</button>
+        <button type="button" class = "optionBtn" name="Vibrato">~</button>
       </div>
 
       <input type = "button" id = "clearTab" value = "Delete Staves" title = "Clear all staves" name = "clearTabButton" onclick = "clearAllStaves();">
