Tab Symbol Update + Index.js organisation
Stave options updated, including spacing for chords being inserted.

Index.js now organised into sections for functions.

--- a/webpages/main.html
+++ b/webpages/main.html
@@ -1527,8 +1527,7 @@
 
       </div>
 
-      <input type="button" id = "undoChange" value = "Undo" title = "Undo last change">
-      <input type="button" id = "clearChord" value = "Clear" title = "Clear all changes">
+      <input type="button" id = "clearChord" value = "Reset" title = "Clear all changes">
       <input type="button" id = "createChord" value = "Create New Chord" title = "Create a new chord to save" onclick = "createChord();">
 
     </div>
