--- a/webpages/main.html
+++ b/webpages/main.html
@@ -12,13 +12,13 @@
   <ul class="navmenu">
     <li class = "navheader">Tabify - Create a Tablature<span id="greeting"></span></li>
     <li><a href="#">Load</a></li>
-    <li><a href="#">Save</a></li>
-    <li><a id = "helpBtn" href="#" onclick = "helpBtn()">Help</a></li>
-    <li><a href="#" onclick = "signOut2();">Sign Out</a></li>
+    <li><a href="#" onclick = "saveTab()">Save</a></li>
+    <li><a href="#" onclick = "helpBtn()">Help</a></li>
+    <li><a href="#" onclick = "signOut2()">Sign Out</a></li>
   </ul>
 </header>
 
-<div id = "myModal" class = "modal">
+<div id = "helpModal" class = "modal">
   <div class = "modalContent">
     <span class = "close">&times;</span>
     <h3>Creating a Tablature</h3>
@@ -50,6 +50,51 @@
       ~ - Vibrato
     </p>
   </div>
+</div>
+
+<div id = "saveModal" class="modal">
+  <div class="modalContent2">
+    <span class = "close">&times;</span>
+    <h3>Song Information:</h3>
+    <p>Please enter the song name, artist and genre in the input area
+       below, then click confirm to save the tablature.</p>
+
+    <div class="saveModalInput">
+      <label>Song Name:</label>
+      <input id = "songName" type="text" name="songName">
+    </div>
+
+    <div class="saveModalInput">
+      <label>Artist Name:</label>
+      <input id = "artistName" type="text" name="artistName">
+    </div>
+
+    <div class="saveModalInput">
+      <label>Genre:</label>
+      <select id = "genreSelect" name="genreSelect">
+        <option>Alternative Rock</option>
+        <option>Blues</option>
+        <option>Classical</option>
+        <option>Country</option>
+        <option>Folk</option>
+        <option>Funk</option>
+        <option>Heavy Metal</option>
+        <option>Hip Hop</option>
+        <option>Indie</option>
+        <option>Jazz</option>
+        <option>Pop</option>
+        <option>Psychadelic Rock</option>
+        <option>Punk Rock</option>
+        <option>Reggae</option>
+        <option>Rock</option>
+        <option>Soul</option>
+        <option>Other</option>
+      </select>
+    </div>
+
+    <input id = "confirmSave" type="button" name="confirmBtn" value="Confirm">
+
+    </div>
 </div>
 
 
