clear form updates for save
and for clear all staves button

--- a/webpages/main.html
+++ b/webpages/main.html
@@ -57,7 +57,10 @@
     <span class = "close">&times;</span>
     <h3>Song Information:</h3>
     <p>Please enter the song name, artist and genre in the input area
-       below, then click confirm to save the tablature.</p>
+       below, then click confirm to save the tablature.<br>
+       <b>Note: Saving the tab will reset the creation form.
+         To come back to the tab after saving it, use the 'load' button.</b>
+      </p>
 
     <div class="saveModalInput">
       <label>Song Name:</label>
