View Tabs Update
Table filled with tab content from database, as well as sorting functionality

--- a/webpages/viewtabs.html
+++ b/webpages/viewtabs.html
@@ -9,7 +9,7 @@
 
 <header>
   <ul class = "navbar">
-    <li class = "navheader">Tabify - View Tablatures<span id = "greeting"></span></li>
+    <li class = "navheader">Tabify - View Tablatures<span id = "greeting2"></span></li>
     <li><a href="#">Sign Out</a></li>
     <li><a href="#">Help</a></li>
   </ul>
@@ -60,7 +60,11 @@
       </div>
 
       <div class = "tabTable">
-        <label>table here</label>
+        <h3>Results</h3>
+
+        <table id = "tabTable">
+        </table>
+
       </div>
 
     </div>
