--- a/webpages/menu.html
+++ b/webpages/menu.html
@@ -16,7 +16,7 @@
     <h1><span id='greeting'></span></h1>
     <ul id='buttonlist'>
       <li><button onClick = "createTabBtn();">Create a new tab</button></li>
-      <li><button>View/Modify an existing tab</button></li>
+      <li><button onClick = "viewTabBtn();">View/Modify an existing tab</button></li>
       <li><button onclick = "signOut();">Sign out</button></li>
     </ul>
   </div>
