viewTabs - which tabs search refined
User able to choose between all tabs, their own tabs and other users tabs

--- a/webpages/viewtabs.html
+++ b/webpages/viewtabs.html
@@ -24,7 +24,7 @@
         <h3>Tablature Selection: Search Criteria</h3>
 
         <label>Show me:</label>
-        <select class = "showWhichTabs" name="showWhichTabs">
+        <select class = "showWhichTabs" name="showWhichTabs" onchange = "showWhichTabsChange();">
           <option value="allTabs">All Tabs</option>
           <option value="myTabs">My Tabs</option>
           <option value="userTabs">User Tabs</option>
