view content update
splits betwen view and edit based on tab selected.
view only displays information of the tablature

--- a/webpages/viewtabs.html
+++ b/webpages/viewtabs.html
@@ -69,7 +69,12 @@
       </div>
 
     </div>
-
-
   </div>
+
+  <div id = "selectedContent">
+    <!-- Inserted via DOM request -->
+  </div>
+
+  
+
 </main>
