working main.html back button

--- a/webpages/main.html
+++ b/webpages/main.html
@@ -9,9 +9,9 @@
 <header>
   <ul class="navmenu">
     <li class = "navheader">Tabify - Create a Tablature<span id="greeting"></span></li>
-    <li><a href="#">Load</a></li>
     <li><a href="#" onclick = "saveTab()">Save</a></li>
     <li><a href="#" onclick = "helpBtn()">Help</a></li>
+    <li><a href="#" onclick = "backBtnMain()">Back</a></li>
     <li><a href="#" onclick = "signOut2()">Sign Out</a></li>
   </ul>
 </header>
