--- a/webpages/viewtabs.html
+++ b/webpages/viewtabs.html
@@ -10,8 +10,9 @@
 <header>
   <ul class = "navbar">
     <li class = "navheader">Tabify - View Tablatures<span id = "greeting2"></span></li>
-    <li><a href="#">Sign Out</a></li>
     <li><a href="#">Help</a></li>
+    <li><a href = '#' onclick = "backBtnView()">Back</a></li>
+    <li><a href="#" onclick = "signOut2()">Sign Out</a></li>
   </ul>
 </header>
 
@@ -75,6 +76,6 @@
     <!-- Inserted via DOM request -->
   </div>
 
-  
+
 
 </main>
