--- a/webpages/login.html
+++ b/webpages/login.html
@@ -13,12 +13,15 @@
 
     <div id='loginbox' class='item1'>
 
-      <h1 class='heading'>Sign In</h1>
-      <p>If you don't have a Google account, you can make one by clicking the button below.
-      <br> Or sign is as a
-      guest with the 'Sign in as Guest' button.</p>
+      <div class="loginInfo">
+        <h1 class='heading'>Sign In</h1>
+        <p>If you have a Google account, you can sign in by clicking the Sign In button below.
+          <br> Or create an account with the 'Create Account' button.</p>
+      </div>
       <div id="googlebutton" class="g-signin2" data-onsuccess="onSignIn" data-theme="dark" data-width="250" data-height="50" data-longtitle="true"></div>
     </div>
+
+    <a class = "createAccountBtn" href="https://accounts.google.com/signup/v2/webcreateaccount?flowName=GlifWebSignIn&flowEntry=SignUp">Create Account</a>
 
     <div id='logintext' class='item2'>
       <h1 class='heading'>Guitar Tablature Creator</h1>
@@ -31,14 +34,14 @@
         <br>This application will allow tab sheets to be transcribed, using a simple fret board to interact with to note down which keys are to be
         played and when.
       <br>Other features include a playback option, to ensure the sheet that has been written sounds just as the user would like.
-        <p>Please sign in to access the application and access all of its features.</p>
         </p>
         <h3 class='subheading'>Help</h3>
-        <p>To use this app, sign in with Google and you will be redirected to the main page. If you want to use it for a one time project, then simply
-          sign in as a guest. Guest accounts will not have the option to save or share created tablatures.
-        <p>Below is a video tutorial on how to use the application to create tab sheets.</p>
+        <p>To use this app, sign in with Google and you will be redirected to the main page. If you do not have a Google account,
+          the 'Create Google Account' button will redirect you to Google's account creation page.
+        <p>For more help, see the help buttons on the forms for more details on using the application</p>
         </p>
       </div>
+
 
     </div>
 
