--- a/webpages/menu.html
+++ b/webpages/menu.html
@@ -8,17 +8,20 @@
 <script src="./js/index.js"></script>
 
 <main>
+
+
   <div id='logo'>
-    <h1>Tabify Logo Here MAYBE</h1>
+    <h1>TabMe - Guitar Tablature Creator</h1>
   </div>
 
+  <h1><span id='greeting'></span></h1>
+
   <div id = 'mainform'>
-    <h1><span id='greeting'></span></h1>
-    <ul id='buttonlist'>
-      <li><button onClick = "createTabBtn();">Create a new tab</button></li>
-      <li><button onClick = "viewTabBtn();">View/Modify an existing tab</button></li>
-      <li><button onclick = "signOut();">Sign out</button></li>
-    </ul>
+    <button class = "mainBtn" id = "createBtn" onClick = "createTabBtn();">Create a new tablature</button>
+    <button class = "mainBtn" id = "viewBtn" onClick = "viewTabBtn();">View / Edit existing tablatures</button>
   </div>
+
+  <button id = "signOutBtn" onclick = "signOut();">Sign out</button>
+
 
 </main>
