viewtabs.html style update
updated css code for viewtabs form

--- a/webpages/menu.html
+++ b/webpages/menu.html
@@ -14,14 +14,14 @@
     <h1>TabMe - Guitar Tablature Creator</h1>
   </div>
 
-  <h1><span id='greeting'></span></h1>
-
   <div id = 'mainform'>
     <button class = "mainBtn" id = "createBtn" onClick = "createTabBtn();">Create a new tablature</button>
     <button class = "mainBtn" id = "viewBtn" onClick = "viewTabBtn();">View / Edit existing tablatures</button>
   </div>
 
-  <button id = "signOutBtn" onclick = "signOut();">Sign out</button>
+  <div class="signOut">
+    <button id = "signOutBtn" onclick = "signOut();">Sign out</button>
+  </div>
 
 
 </main>
