chord editting and deletion
chords now able to be edited as well as deleted, do not get duplicated in database...

--- a/webpages/main.html
+++ b/webpages/main.html
@@ -913,7 +913,7 @@
             <option value = "Am">Am</option>
             <option value = "Em">Em</option>
           </select>
-        <input type = "button" id = "selectChordButton" value = "Select" title = "Select a presaved chord to add to tablature" onclick = "selectChord();">
+        <input type = "button" id = "selectChordButton" value = "Select" title = "Select a presaved chord to add to tablature." onclick = "selectChord();">
       </div>
 
       <div class="savedchords">
@@ -922,6 +922,7 @@
               <!-- to be filled by server -->
             </select>
           <input type="button" id = "selectSavedChordBtn" value="Select" title = "Select a saved chord to add to tablature" onclick = "selectMyChord();">
+          <input type="button" id = "editChordBtn" value="Edit" title = "Select a presaved chord to edit below." onclick = "editChord();">
       </div>
     </div>
 
