--- a/webpages/login.html
+++ b/webpages/login.html
@@ -24,16 +24,19 @@
     <a class = "createAccountBtn" href="https://accounts.google.com/signup/v2/webcreateaccount?flowName=GlifWebSignIn&flowEntry=SignUp">Create Account</a>
 
     <div id='logintext' class='item2'>
-      <h1 class='heading'>Guitar Tablature Creator</h1>
+      <h1 class='heading'>TabMe - A Guitar Tablature Creator</h1>
       <h4 class='heading'>A Final Year Project by UP815459</h4>
 
       <div id='infotext'>
         <h3 class='subheading'>About</h3>
-        <p>This application is used to help musicians transcribe music from their instrument into a tablature format, using this easy-to-use web application, which
-          also allows tab sheets to be saved, exported and shared with other accounts.
-        <br>This application will allow tab sheets to be transcribed, using a simple fret board to interact with to note down which keys are to be
-        played and when.
-      <br>Other features include a playback option, to ensure the sheet that has been written sounds just as the user would like.
+        <p>This application is used to help musicians transcribe music from their instrument into a tablature format, from tablature symbols for lead guitar parts to
+          custom chord creation for rhythm parts. This app also allows tablatures to be shared across the Internet, for all teachers, students and general guitarists
+          to have access to.
+        <br>This application will allow tab sheets to be transcribed, using a simple fret board to interact with to note down which notes are to be
+        played and when. Multiple stave options allow for multiple parts of the same song to be transcribed and saved as one document, making it
+        easy to create tablatures not only for small riffs, but also songs as a whole.
+      <br>Other features include an audio playback option, to ensure the sheet that has been written sounds just as the user would like, as well as
+      search oppertunities to find specific community-created tablatures.
         </p>
         <h3 class='subheading'>Help</h3>
         <p>To use this app, sign in with Google and you will be redirected to the main page. If you do not have a Google account,
