--- a/webpages/login.html
+++ b/webpages/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Guitar Tab Creator</title>
+<title>TabMe - Guitar Tab Creator</title>
 
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <meta name="google-signin-client_id" content="566769051678-k1mpvtssd5jin7p6bekdtv7g1r23qav4.apps.googleusercontent.com">
