--- a/webpages/menu.html
+++ b/webpages/menu.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Guitar Tab Creator</title>
+<title>TabMe - Guitar Tab Creator</title>
 
 <!-- <link rel="stylesheet" href="./css/menu.css" type="text/css"> -->
 <link rel="stylesheet" href="./css/menu.css">
