--- a/webpages/viewtabs.html
+++ b/webpages/viewtabs.html
@@ -1,6 +1,6 @@
 <!-- VIEW / MODIFY TABS FORM -->
 <!DOCTYPE html>
-<title>Guitar Tab Creator</title>
+<title>TabMe - Guitar Tab Creator</title>
 
 <link rel="stylesheet" href="./css/viewtabs.css">
 <link href="https://fonts.googleapis.com/css?family=Neuton:800|Open+Sans:400,700" rel="stylesheet">
