minor css changes

--- a/webpages/main.html
+++ b/webpages/main.html
@@ -1059,12 +1059,6 @@
         <input type = "button" id = "deleteStave" value = "Delete Stave" title = "Delete the selected Stave" name="deleteStave" onclick = "deleteStave();">
       </div>
 
-      <div class="audiOBtns">
-        <h4>Audio Playback</h4>
-        <input type="button" id = "playTabAudio" value="Play Audio" name = "playAudioBtn" onclick = "playAudio()">
-        <input type="button" id = "pauseTabAudio" value="Pause Audio" name = "pauseAudioBtn" onclick = "pauseAudio()">
-        <input type="button" id = "stopTabAudio" value="Stop Audio" name = "stopAudioBtn" onclick = "stopAudio()">
-      </div>
 
     </div>
 
@@ -1099,7 +1093,7 @@
       <input type = "button" id = "clearTab" value = "Delete All Staves" title = "Clear all staves" name = "clearTabButton" onclick = "clearAllStaves();">
 
       <div class="block2" id = "optionBtns">
-        <h4 id = "symbolsH4">Tab Symbols:</h4>
+        <h4 id = "symbolsH4">Tab Symbols</h4>
         <button type="button" class = "optionBtn" name="Hammer On">h</button>
         <button type="button" class = "optionBtn" name="Bend">b</button>
         <button type="button" class = "optionBtn" name="Pull Off">p</button>
@@ -1109,6 +1103,11 @@
         <button type="button" id = "clearOptions" name="clearOptions">Clear</button>
       </div>
 
+      <div class="audiOBtns">
+        <h4 id = "audioH4">Audio Playback</h4>
+        <input type="button" id = "playTabAudio" value="Play Audio" name = "playAudioBtn" onclick = "playAudio()">
+        <input type="button" id = "stopTabAudio" value="Stop Audio" name = "stopAudioBtn" onclick = "stopAudio()">
+      </div>
 
     </div>
   </div>
