--- a/webpages/login.html
+++ b/webpages/login.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" type="text/css" href="./css/login.css">
 <link href="https://fonts.googleapis.com/css?family=Neuton:800|Open+Sans:400,700" rel="stylesheet">
 
+<meta name="google-site-verification" content="d7h_fP3cHteL9VvmQt7nxwPwfp0SDtzvuB_WTOnGGfM" />
+
 <script src="./js/index.js"></script>
 
 <main>
