--- a/webpages/login.html
+++ b/webpages/login.html
@@ -5,8 +5,9 @@
 <meta name="google-signin-client_id" content="566769051678-k1mpvtssd5jin7p6bekdtv7g1r23qav4.apps.googleusercontent.com">
 <link rel="stylesheet" type="text/css" href="./css/login.css">
 <link href="https://fonts.googleapis.com/css?family=Neuton:800|Open+Sans:400,700" rel="stylesheet">
-
-<meta name="google-site-verification" content="d7h_fP3cHteL9VvmQt7nxwPwfp0SDtzvuB_WTOnGGfM" />
+<head>
+  <meta name="google-site-verification" content="d7h_fP3cHteL9VvmQt7nxwPwfp0SDtzvuB_WTOnGGfM" />
+</head>
 
 <script src="./js/index.js"></script>
 
