--- a/webpages/main.html
+++ b/webpages/main.html
@@ -6,6 +6,10 @@
 
 <script src = "./js/index.js"></script>
 
+<head>
+  <meta name="google-site-verification" content="d7h_fP3cHteL9VvmQt7nxwPwfp0SDtzvuB_WTOnGGfM" />
+</head>
+
 <header>
   <ul class="navmenu">
     <li class = "navheader">TabMe - Create a Tablature<span id="greeting"></span></li>
