--- a/webpages/viewtabs.html
+++ b/webpages/viewtabs.html
@@ -7,6 +7,10 @@
 
 <script src = "./js/index.js"></script>
 
+<head>
+  <meta name="google-site-verification" content="d7h_fP3cHteL9VvmQt7nxwPwfp0SDtzvuB_WTOnGGfM" />
+</head>
+
 <header>
   <ul class = "navbar">
     <li class = "navheader">TabMe - View or Edit Tablatures<span id = "greeting2"></span></li>
