--- a/webpages/menu.html
+++ b/webpages/menu.html
@@ -7,6 +7,10 @@
 
 <script src="./js/index.js"></script>
 
+<head>
+  <meta name="google-site-verification" content="d7h_fP3cHteL9VvmQt7nxwPwfp0SDtzvuB_WTOnGGfM" />
+</head>
+
 <main>
 
 
