--- a/webpages/login.html
+++ b/webpages/login.html
@@ -31,6 +31,7 @@
       <h4 class='heading'>A Final Year Project by UP815459</h4>
 
       <div id='infotext'>
+        </div>
         <h3 class='subheading'>About</h3>
         <p>This application is used to help musicians transcribe music from their instrument into a tablature format, from tablature symbols for lead guitar parts to
           custom chord creation for rhythm parts. This app also allows tablatures to be shared across the Internet, for all teachers, students and general guitarists
